# pie

./: .gitignore  AGENTS.md  README.md
backend/backend-metal/: .gitignore  CMakeLists.txt  Makefile  Makefile.metal_tests  README.md  dev.toml  test_kernel_loading  test_kernel_loading.mm  test_shader_compilation  test_shader_compilation.mm  test_unified_attention_debug  test_unified_attention_debug.mm
backend/backend-metal/src/: attention_bindings.mm  bindings.mm  final_test_softmax.cpp  handler.py  l4ma_runtime.py  metal_add_residual.hpp  metal_add_residual.metal  metal_add_residual.mm  metal_append_paged_kv_cache.hpp  metal_append_paged_kv_cache.mm  metal_attention_baseline.metal  metal_attention_common.metal  metal_attention_naive.hpp  metal_attention_naive.mm  metal_attention_simdgroup_opt.metal  metal_backend.py  metal_batch_prefill_attention.hpp  metal_batch_prefill_attention.metal  metal_batch_prefill_attention.mm  metal_batch_prefill_attention_f16_native.metal  metal_batch_prefill_attention_flashattention.metal  metal_batch_prefill_attention_unified.hpp  metal_batch_prefill_attention_unified.mm  metal_batch_prefill_attention_wrapper.hpp  metal_batch_prefill_attention_wrapper.mm  metal_batch_prefill_handle.hpp  metal_buffer.hpp  metal_buffer.mm  metal_common.hpp  metal_common.mm  metal_dtype_conversion.hpp  metal_dtype_conversion.mm  metal_embedding.hpp  metal_embedding.metal  metal_embedding.mm  metal_embedding_reference.cpp  metal_extract_k_values.hpp  metal_extract_k_values.metal  metal_extract_k_values.mm  metal_extract_k_values_reference.cpp  (+53 more)
backend/backend-metal/tests/: CMakeLists.txt  README.md
cuda-protocol-tests/: .gitignore  CMakeLists.txt
cuda-protocol-tests/scripts/: generate_cuda_artifacts.sh  regenerate_artifacts.sh
cuda-protocol-tests/src/: config_loader.hpp  main.cpp  ops.hpp  ops_cuda.cu
cuda-protocol-tests/src/ops/: add_residual.cu  append_paged_kv_cache.cu  batch_prefill_attention.cu  embedding_lookup.cu  extract_k_values.cu  forward_pass_integration.cu  gemm.cu  grouped_gemm.cu  ops_common.cuh  rms_norm.cu  rope.cu  silu_and_mul.cu  softmax.cu  topk_mask_logits.cu
cuda-protocol-tests/src/test_kernels/: embed_fp16.cu  extract_k_values_fp16.cu  gemm_fp16.cu  softmax_multi_dtype.cu  test_kernels.cuh  topk_mask_multi_dtype.cu
inferlets/knowledge-graph/: Cargo.toml  Pie.toml
inferlets/knowledge-graph/src/: lib.rs
inferlets/template-generation/: Cargo.toml  Pie.toml
inferlets/template-generation/src/: lib.rs
metal-protocol-tests/: .gitignore  CMakeLists.txt  CMakeLists_cuda_only.txt  CMakeLists_metal_only.txt  METAL_API_TEST_COVERAGE.md  README.md  apple_gpu_configs.json  convert_bf16_to_f32.py  convert_f32_to_bf16.py  create_medium_bf16_test.py  create_small_f32_test.py  debug_cuda_pattern.py  extract_cuda_tokens.cpp  llama31_configs.json  test_debug_extract_k.cpp  test_struct_alignment.cpp  validate_rmsnorm.py
metal-protocol-tests/scripts/: compare_artifacts.py  regenerate_artifacts.sh  run_all_organized_tests.sh  run_organized_tests.sh  test_all_ops.sh
metal-protocol-tests/src/: artifacts.hpp  dtype_utils.hpp  main.cpp  metal_helpers.hpp  metal_test_main.mm  ops.cu  ops.hpp  ops_add_residual.mm  ops_append_paged_kv_cache.mm  ops_batch_prefill_attention.mm  ops_embedding_lookup.mm  ops_extract_k_values.mm  ops_gemm.mm  ops_grouped_gemm.mm  ops_metal.mm  ops_rms_norm.mm  ops_rope.mm  ops_silu_and_mul.mm  ops_softmax.mm  ops_topk_mask_logits.mm  workspace_utils.hpp
metal-protocol-tests/tests/: .gitignore  CMakeLists.txt  benchmark_runner.py  run_benchmark_with_progress.sh
pie/: pyproject.toml
pie/src/flashinfer_metal/: __init__.py  _compiler.py  rand_mv.py
pie/src/pie/: __init__.py  capabilities.py  config.py  drivers.py  manager.py  server.py
pie/src/pie_backend/: __init__.py  adapter.py  batching.py  config.py  engine.py  loader.py  rand_mv.py  worker.py
pie/src/pie_backend_dummy/: __init__.py  config.py
pie/src/pie_backend_sglang/: __init__.py  config.py  engine.py  forward_batch.py  forward_pass.py  kv_cache.py  loader.py  mask_hooks.py  worker.py
pie/src/pie_backend_vllm/: __init__.py  _vllm_compat.py  attn_metadata.py  config.py  engine.py  forward_pass.py  kv_cache.py  lean_forward.py  loader.py  mask_compute.py  mask_impls.py  mask_strategies.py  worker.py
pie/src/pie_cli/: cli.py  config.py  http.py  serve.py
pie/src/pie_driver/: __init__.py  batching.py  config.py  engine.py  hf_utils.py  latency.py  loader.py  message.py  schema.py  utils.py  worker.py
pie/src/pie_driver_dummy/: __init__.py  worker.py
pie/src/pie_driver_sgl/: __init__.py  adapter.py  adapter_hooks.py  config.py  engine.py  forward_batch.py  forward_pass.py  kv_cache.py  loader.py  mask_hooks.py  worker.py
pie/src/pie_driver_vllm/: __init__.py  _vllm_compat.py  config.py  engine.py  forward_pass.py  kv_cache.py  loader.py  mask_compute.py  mask_strategies.py  worker.py
pie/src/pie_kernels/: __init__.py  attention.py  fp4_quantization.py  fused_moe.py  rand_mv.py  sampling.py
pie/src/pie_worker/: batch_merger.py  batching.py  config.py  runtime.py  server.py  vllm_capture.py  vllm_runtime.py  vllm_sequence_tracker.py
pie/tests/: debug_batch_size.py  debug_packed.py  test_model.py
pie/tests/pie_kernels_metal/: bench_decode_profile.py  bench_decode_step.py  bench_gemm_micro.py  conftest.py  test_append_paged_kv_cache.py  test_attention_sink.py  test_batch_decode.py  test_batch_prefill.py  test_bench_vs_mlx.py  test_get_batch_indices_positions.py  test_get_seq_lens.py  test_mm_fp8.py  test_moe_fp4.py  test_moe_routing.py  test_rms_norm.py  test_rope_cos_sin_cache.py  test_rope_llama31.py  test_rope_pos_ids.py
pie/tests/worker/: debug_embed_shape.py  test_client.py  (+13 more)
runtime/: Cargo.toml
runtime/benches/: page_trim_bench.rs  pagestore_bench.rs
runtime/src/: api.rs  bootstrap.rs  context.rs  context_legacy.rs  daemon.rs  device.rs  engine.rs  ffi.rs  inference.rs  instance.rs  lib.rs  linker.rs  model.rs  process.rs  program.rs  py_runtime.rs  runtime.rs  server.rs
runtime/tests/: context.rs  e2e.rs
runtime/wit/: world.wit
(+530 files in other folders)
