[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.3.0"
description = "Programmable Inference Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "In Gim", email = "in.gim@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base dependencies (CPU compatible / PyPI available)
dependencies = [
    "einops>=0.8.1",
    "fire>=0.6",
    "httpx>=0.27",
    "huggingface_hub>=1.2.4",
    "numba>=0.63",
    "msgpack>=0.5",
    "msgspec>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pie-bakery",
    "pie-client",
    "platformdirs>=4.3",
    "psutil>=7.1.3",
    "pyzmq>=27.0.0",
    "requests>=2.32",
    "rich>=13.0",
    "safetensors>=0.6.2",
    "toml>=0.10",
    "tqdm>=4.67",
    "typer>=0.12",
    "websockets>=15.0",
    "ztensor>=0.1.4",
    "textual>=7.2.0",
]

[project.optional-dependencies]

# --- CUDA ---
cu126 = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    "flashinfer-python>=0.6.1",
    "flashinfer-cubin>=0.6.1",
]

cu128 = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    # All three flashinfer packages must agree on the patch version — the
    # Python wrapper, the cubin loader, and the precompiled C ops have
    # ABI-coupled signatures. vllm pins flashinfer-python==0.6.8.post1,
    # so we lock the other two to match.
    "flashinfer-python==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
    "flashinfer-jit-cache==0.6.8.post1",
]

# --- Metal (macOS) ---
metal = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    "pyobjc-core>=10.0,<11.0",
    "pyobjc-framework-Metal>=10.0,<11.0",
    "pyobjc-framework-MetalKit>=10.0,<11.0",
    "pyobjc-framework-Cocoa>=10.0,<11.0",
]

# --- vLLM backend (CUDA / ROCm / XPU / TPU) ---
# Pinned tight to the version we test against; bumped weekly via automation.
# Sourced from the sibling `vllm/` checkout so we track upstream tip, not
# the stale `vllm` PyPI metadata (the cu128 mirror lags far behind upstream).
vllm = [
    "vllm",
]

# --- SGLang backend (CUDA / ROCm / XPU / NPU) ---
# Sourced from the sibling `sglang/` checkout so we track upstream tip.
# SGLang's pyproject pins exact torch/torchao/torchaudio + flashinfer
# patch versions; mirror those here so uv resolves them through the
# torch-cu130 index (otherwise it tries cu13x and the wheels are missing).
# Bumped in lockstep with `git -C ../../sglang pull`.
sglang = [
    "torch==2.9.1",
    "torchao==0.17.0",
    "torchaudio==2.9.1",
    "torchvision",
    "flashinfer-python==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
    "flashinfer-jit-cache==0.6.8.post1",
    "sglang",
]

[project.scripts]
pie = "pie_cli.cli:app"

# --- UV Configuration ---

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# cu130 channel — used by the sglang extra. Upstream sglang's pyproject
# pins torch/torchvision/torchaudio through its own `torch-cu130` index
# (see ../../sglang/python/pyproject.toml [tool.uv.sources]); we mirror that
# choice here so uv sees a single source for these packages.
[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[tool.uv.sources]

# Local workspace members
pie-client = { path = "../client/python", editable = true }
pie-bakery = { path = "../sdk/tools/bakery", editable = true }

# Track upstream vllm via the sibling checkout. Pin behavior is "whatever is
# checked out" — bump via `git -C ../../vllm pull` then re-sync.
# vllm = { path = "../../vllm", editable = true }

# Track upstream sglang via the sibling checkout. Same convention as vllm.
# The sglang Python package lives at ../../sglang/python.
# sglang = { path = "../../sglang/python", editable = true }

# Torch: cu126 from cu126 index, sglang's pinned 2.9.1 from the cu130 index
# (sglang upstream pins it that way). The vllm path's loose `torch>=2.7.1`
# (in the cu128 base extra) keeps using PyPI's default channel as before.
torch = [
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "torch-cu130", extra = "sglang" },
]
torchao = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "torch-cu130", extra = "sglang" },
]
torchaudio = [
    { index = "torch-cu130", extra = "sglang" },
]
torchvision = [
    { index = "torch-cu130", extra = "sglang" },
]

# FlashInfer JIT Cache: custom index for cu128 base extra and the sglang extra
# (both pin 0.6.8.post1).
flashinfer-jit-cache = [
    { index = "flashinfer-cu128", extra = "cu128" },
    { index = "flashinfer-cu128", extra = "sglang" },
]

[tool.maturin]
python-source = "src"
python-packages = ["pie", "pie_cli", "pie_driver", "pie_driver_vllm", "pie_driver_sgl", "pie_driver_dummy", "pie_kernels"]
module-name = "pie._runtime"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "../runtime/Cargo.toml"}, {file = "../runtime/**/*.rs"}]

conflicts = [
    [
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "metal" },
        # sglang's torch==2.9.1 / torchao==0.17.0 conflict with the looser
        # cu128 pin and with cu126's index. Treat sglang as its own platform
        # bundle: it pins the full torch trio + flashinfer set.
        { extra = "sglang" },
    ],
    # sglang and vllm pull conflicting flashinfer / torch pins; pick one.
    [
        { extra = "vllm" },
        { extra = "sglang" },
    ],
]
