[package]
name = "pie"
version = "0.3.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Programmable Inference Engine (Pie)"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[dependencies]
pie-client = { path = "../client/rust" }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
rand = { version = "0.9.2", features = ["std_rng", "os_rng"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
serde_json = { version = "1.0", features = ["preserve_order"] }
wasmtime = { version = "41.0.3", features = ["pooling-allocator", "component-model-async"] }
wasmtime-wasi = "41.0.3"
wasmtime-wasi-http = "41.0.3"
bytes = "1.10.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
boxcar = "0.2.13"
thiserror = "2.0.11"
futures = "0.3.31"
rmp-serde = "1.3.0"
hyper = "1.6.0"
http-body-util = "0.1"
blake3 = "1.8.2"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
num-traits = "0.2.19"
rmpv = { version = "1.3.0", features = ["with-serde"] }
base64 = "0.22.1"
fancy-regex = "0.16.0"
once_cell = "1.21"
async-trait = "0.1.88"
ring = "0.17"
ssh-key = { version = "0.6", features = ["rsa", "ed25519", "ecdsa"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
p256 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
p384 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
sha2 = "0.10"
chrono = "0.4"
ringbuffer = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
bytemuck = { version = "1.21", features = ["derive"] }
ipc-channel = "0.19"
rustc-hash = "2.1"
aho-corasick = "1"
memchr = "2"
unicode-normalization = "0.1"
smallvec = "1"
lru = "0.16.3"
ahash = "0.8.12"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokenizers = "0.21"

[[bench]]
name = "inferlet_bench"
harness = false

[[bench]]
name = "pagestore_bench"
harness = false

#[profile.release]
#lto = "fat"
#codegen-units = 1
